# EfficiencyAnalyzer

./: .gitignore  Analyzer.py  Analyzer_GE21_XTalk.py  MergeCSV.py  PlotEfficiency.py  PlotVFATStatus.py  ShortListChamber.py  Test_Different_Matching_Logics.py  env.sh  extract_boundaries.py  pyproject.toml
VFATEfficiencyPlotter/: CMakeLists.txt  VFATEffPlotter.cpp  env.sh
condor/: runAnalyzers.py
condor/JobFiles/: .gitignore
cpp/: CMakeLists.txt  Hits_plotter.cpp  VFATEffPlotter.cpp  env.sh
cpp/include/: VFATEffPlotter.h
data/output/: .gitignore
data/templates/: templateReReco_config.yml  template_config.yml
doc/: EtaPartitionDataFormat.md
scripts/: DisplacementPlot.py  DisplacementPlot_Original.py  DisplacementPlot_longOnly.py  Displacement_AllChambers.py  FitResiduals.py  FitResiduals_LongOnly.py  HighGranularityEfficiency.py  MergeCSV.py  PlotEfficiency.py  PlotEfficiencyEta.py  PlotResidualsRatio.py  PlotVFATStatus.py
tools/: AkArray_Operations.py  BranchesSelected.py  EtaPartitionBoundaries_2024.py  EtaPartitionBoundaries_df.py  MaskFunctions.py  MaskFunctionsGE21.py  PlottingFunctions.py  Statistics.py  Utils.py  config_parser.py  myLogger.py
tools/__pycache__/: PlottingFunctions.Fill_Histo_Residuals-50.py38.1.nbc  PlottingFunctions.Fill_Histo_Residuals-50.py38.2.nbc  PlottingFunctions.Fill_Histo_Residuals-50.py38.nbi  PlottingFunctions.compute_bin-18.py38.1.nbc  PlottingFunctions.compute_bin-18.py38.nbi  PlottingFunctions.compute_bin-19.py38.1.nbc  PlottingFunctions.compute_bin-19.py38.2.nbc  PlottingFunctions.compute_bin-19.py38.nbi  PlottingFunctions.compute_bin-21.py38.1.nbc  PlottingFunctions.compute_bin-21.py38.nbi  PlottingFunctions.get_bin_edges-6.py38.1.nbc  PlottingFunctions.get_bin_edges-6.py38.nbi  PlottingFunctions.get_bin_edges-7.py38.1.nbc  PlottingFunctions.get_bin_edges-7.py38.2.nbc  PlottingFunctions.get_bin_edges-7.py38.nbi  PlottingFunctions.get_bin_edges-8.py38.1.nbc  PlottingFunctions.get_bin_edges-8.py38.nbi  Utils.aggregateHitsVFAT-51.py38.1.nbc  (+45 more)
